# sora2-pusher

./: .gitignore  README.md  SKILL.md  activate.sh  manifest.json  pyproject.toml  requirements.txt  setup.bat  setup.sh
config/: accounts.json.example
docs/: claude-code-integration.md  cli-guide.md
references/: douyin_publish.md
scripts/: chrome_launcher.py  douyin_analytics.py  douyin_login.py  douyin_publisher.py  jianying_worker.py  jimeng_gen.py  video_gen.py  volc_gen.py
src/dy_cli/: __init__.py  main.py
src/dy_cli/commands/: account.py  analytics.py  auth.py  config_cmd.py  download.py  dreamina.py  init.py  interact.py  live.py  profile.py  publish.py  search.py  trending.py
src/dy_cli/engines/: api_client.py  playwright_client.py
src/dy_cli/utils/: config.py  output.py  signature.py
