[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dy-cli"
version = "0.1.0"
description = "抖音命令行工具 — 发布、搜索、下载、互动、数据分析、热榜、直播"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Ben" }]
keywords = ["douyin", "dy", "tiktok", "抖音", "cli", "automation"]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.27.0",
    "playwright>=1.40",
]

[project.scripts]
dy = "dy_cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/dy_cli", "scripts"]
